--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>tradehax.net — ShamrockStocks</title>
   </head>
   <body>
-    <h1>tradehax.net</h1>
-    <p>Placeholder site for tradehax.net. Replace with your real site content.</p>
+    <header>
+      <h1>tradehax.net</h1>
+      <nav><a href="/">Home</a> · <a href="/about.html">About</a></nav>
+    </header>
+    <main>
+      <p>Placeholder site for tradehax.net. Replace with your real site content.</p>
+    </main>
+    <footer>
+      <p>&copy; ShamrockStocks</p>
+    </footer>
+    <link rel="stylesheet" href="/assets/style.css">
   </body>
 </html>
