Remove unused static workflow

--- a/index.html
+++ b/index.html
@@ -17,5 +17,18 @@
       <p>&copy; ShamrockStocks</p>
     </footer>
     <link rel="stylesheet" href="/assets/style.css">
+
+    <!-- Analytics placeholder: replace MEASUREMENT_ID with your ID -->
+    <!-- Example: Google Analytics 4 snippet (replace G-XXXXXXX with your ID) -->
+    <!--
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MEASUREMENT_ID"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);} 
+      gtag('js', new Date());
+      gtag('config', 'G-MEASUREMENT_ID');
+    </script>
+    -->
+
   </body>
 </html>
