Remove workflows; embed resume PDF as homepage; add robots/sitemap

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
       <h1>tradehax.net</h1>
       <nav><a href="/">Home</a> · <a href="/about.html">About</a></nav>
     </header>
-    <main>
-      <p>Placeholder site for tradehax.net. Replace with your real site content.</p>
+
+    <!-- Embed resume PDF as the homepage for now -->
+    <main style="margin:0;padding:0;">
+      <iframe src="/MichaelSFlahertyResume.pdf" title="Resume" style="width:100%;height:calc(100vh - 60px);border:none;" sandbox>
+        <p>Your browser does not support PDFs. <a href="/MichaelSFlahertyResume.pdf">Download the resume</a>.</p>
+      </iframe>
     </main>
+
     <footer>
       <p>&copy; ShamrockStocks</p>
     </footer>
