Add logo, download link, scaffold projects and blog pages; update index to embed resume

--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <title>tradehax.net — ShamrockStocks</title>
   </head>
   <body>
-    <header>
-      <h1>tradehax.net</h1>
-      <nav><a href="/">Home</a> · <a href="/about.html">About</a></nav>
+    <header style="display:flex;align-items:center;justify-content:space-between;gap:16px;">
+      <div style="display:flex;align-items:center;gap:12px;">
+        <a href="/" style="display:inline-flex;align-items:center;text-decoration:none;color:inherit;">
+          <img src="/assets/logo.svg" alt="logo" style="height:36px;width:36px;display:inline-block;" />
+          <span style="font-weight:600;margin-left:8px;">ShamrockStocks</span>
+        </a>
+      </div>
+      <nav style="display:flex;gap:12px;align-items:center;">
+        <a href="/" style="color:#0366d6;text-decoration:none;">Home</a>
+        <a href="/about.html" style="color:#0366d6;text-decoration:none;">About</a>
+        <a href="/projects.html" style="color:#0366d6;text-decoration:none;">Projects</a>
+        <a href="/blog/" style="color:#0366d6;text-decoration:none;">Blog</a>
+      </nav>
+      <div>
+        <a href="/MichaelSFlahertyResume.pdf" download style="background:#0366d6;color:#fff;padding:8px 12px;border-radius:6px;text-decoration:none;font-size:90%;">Download Resume</a>
+      </div>
     </header>
 
     <!-- Embed resume PDF as the homepage for now -->
