Add small responsive resume download link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <a href="/blog/" style="color:#0366d6;text-decoration:none;">Blog</a>
       </nav>
       <div>
-        <a href="/MichaelSFlahertyResume.pdf" download style="background:#0366d6;color:#fff;padding:8px 12px;border-radius:6px;text-decoration:none;font-size:90%;">Download Resume</a>
+        <a class="header-download" href="/MichaelSFlahertyResume.pdf" download style="background:#0366d6;color:#fff;padding:8px 12px;border-radius:6px;text-decoration:none;font-size:90%;">Download Resume</a>
+        <!-- Small download link for mobile / compact views -->
+        <a class="download-small" href="/MichaelSFlahertyResume.pdf" download aria-label="Download resume" style="text-decoration:none;color:#0366d6;margin-left:8px;">▸ Resume</a>
       </div>
     </header>
 
