Add sticky floating download button and analytics download-tracking helper

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <!-- Analytics placeholder: replace MEASUREMENT_ID with your ID -->
     <!-- Example: Google Analytics 4 snippet (replace G-XXXXXXX with your ID) -->
     <!--
+    Replace `G-MEASUREMENT_ID` with your GA4 Measurement ID to enable analytics.
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MEASUREMENT_ID"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -49,6 +50,30 @@
       gtag('config', 'G-MEASUREMENT_ID');
     </script>
     -->
+
+    <script>
+      // Track resume downloads and other interactions.
+      function trackDownload() {
+        try {
+          // If GA is configured with gtag, send an event
+          if (typeof gtag === 'function') {
+            gtag('event', 'download_resume', {
+              'event_category': 'engagement',
+              'event_label': 'MichaelSFlahertyResume.pdf'
+            });
+          }
+        } catch (e) {
+          console.log('analytics track error', e);
+        }
+      }
+      // Attach click handlers for elements that may be added dynamically
+      document.addEventListener('DOMContentLoaded', function(){
+        var els = document.querySelectorAll('a[href$="MichaelSFlahertyResume.pdf"]');
+        els.forEach(function(el){
+          el.addEventListener('click', trackDownload);
+        });
+      });
+    </script>
 
   </body>
 </html>
