--- a/index.html
+++ b/index.html
@@ -38,20 +38,40 @@
         </div>
         <div id="pdf-viewer" style="width:100%;height:calc(100vh - 120px);background:#fff;"></div>
 
-        <!-- Self-hosted PDF.js viewer (local). If `pdfjs/` is not installed, follow instructions in `pdfjs/README.md` to download the full distribution. -->
+        <!-- Self-hosted PDF.js viewer (local). If `pdfjs/` is not available, show image fallback from raw GitHub as a static viewer. -->
         <script>
-          (function(){
+          (async function(){
             var pdfPath = '/MichaelSFlahertyResume.pdf';
-            // Prefer the lightweight local viewer (uses CDN for pdf.js library). If you later add full pdfjs/web viewer, it will also work.
-            var localViewer = '/pdfjs/viewer.html?file=' + encodeURIComponent(location.origin + pdfPath);
-            var iframe = document.createElement('iframe');
-            iframe.src = localViewer;
-            iframe.style.width = '100%';
-            iframe.style.height = '100%';
-            iframe.style.border = 'none';
             var viewer = document.getElementById('pdf-viewer');
             viewer.innerHTML = '';
-            viewer.appendChild(iframe);
+            try{
+              // Test whether the local viewer exists on Pages
+              var head = await fetch('/pdfjs/viewer.html', {method: 'HEAD'});
+              if (head && head.ok) {
+                var localViewer = '/pdfjs/viewer.html?file=' + encodeURIComponent(location.origin + pdfPath);
+                var iframe = document.createElement('iframe');
+                iframe.src = localViewer;
+                iframe.style.width = '100%';
+                iframe.style.height = '100%';
+                iframe.style.border = 'none';
+                viewer.appendChild(iframe);
+                return;
+              }
+            }catch(e){
+              // Network or fetch failed — fall through to image fallback
+              console.warn('Local viewer check failed:', e);
+            }
+
+            // Fallback: show the generated image(s) from the repository raw URL
+            // Raw URLs are served by raw.githubusercontent.com and can be embedded as images.
+            var img = document.createElement('img');
+            img.alt = 'Resume page (image fallback)';
+            img.style.width = '100%';
+            img.style.height = '100%';
+            img.style.objectFit = 'contain';
+            // Use raw.githubusercontent URL so the image loads even if Pages isn't serving the file yet
+            img.src = 'https://raw.githubusercontent.com/ShamrocksStocks/shamrockstocks.github.io/main/resume-images/page-01.png';
+            viewer.appendChild(img);
           })();
         </script>
         <noscript>
