--- a/index.html
+++ b/index.html
@@ -51,17 +51,31 @@
             container.style.justifyContent = 'center';
             container.style.background = '#fff';
 
-            var img = document.createElement('img');
-            img.alt = 'Resume page (image fallback)';
-            img.style.maxWidth = '100%';
-            img.style.maxHeight = '100%';
-            img.style.objectFit = 'contain';
-            img.src = 'https://raw.githubusercontent.com/ShamrocksStocks/shamrockstocks.github.io/main/resume-images/page-01.png';
-
-            // Add a small caption with a Download link under the image for convenience
+            // Attempt to load a sequence of generated page images from raw.githubusercontent.
+            // We try page-01..page-20 and append whichever ones load successfully.
             var wrapper = document.createElement('div');
             wrapper.style.textAlign = 'center';
-            wrapper.appendChild(img);
+            var pagesLoaded = 0;
+            var maxPages = 20;
+            for (let i = 1; i <= maxPages; i++) {
+              const name = 'page-' + String(i).padStart(2, '0') + '.png';
+              const url = 'https://raw.githubusercontent.com/ShamrocksStocks/shamrockstocks.github.io/main/resume-images/' + name;
+              const img = new Image();
+              img.alt = 'Resume page ' + i;
+              img.style.maxWidth = '100%';
+              img.style.display = 'block';
+              img.style.margin = '12px auto';
+              img.onload = function(){
+                pagesLoaded += 1;
+                wrapper.appendChild(img);
+              };
+              img.onerror = function(){
+                // missing page — ignore
+              };
+              img.src = url;
+            }
+
+            // Caption + download button under images
             var caption = document.createElement('div');
             caption.style.marginTop = '10px';
             caption.innerHTML = '<a href="/MichaelSFlahertyResume.pdf" style="display:inline-block;padding:6px 10px;background:#0366d6;color:#fff;border-radius:6px;text-decoration:none">Download PDF</a>';
