Homepage: prefer WebP resume images

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             var pagesLoaded = 0;
             var maxPages = 20;
             for (let i = 1; i <= maxPages; i++) {
-              const name = 'page-' + String(i).padStart(2, '0') + '.png';
+              const name = 'page-' + String(i).padStart(2, '0') + '.webp';
               const url = 'https://raw.githubusercontent.com/ShamrocksStocks/shamrockstocks.github.io/main/resume-images/' + name;
               const img = new Image();
               img.alt = 'Resume page ' + i;
