Add PDF viewer page and viewer link to index for reliable resume viewing

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       </nav>
       <div>
         <a class="header-download" href="/MichaelSFlahertyResume.pdf" download style="background:#0366d6;color:#fff;padding:8px 12px;border-radius:6px;text-decoration:none;font-size:90%;">Download Resume</a>
+        <a class="header-view" href="/resume.html" style="margin-left:8px;background:#22c55e;color:#fff;padding:8px 12px;border-radius:6px;text-decoration:none;font-size:90%;">View Resume</a>
         <!-- Small download link for mobile / compact views -->
         <a class="download-small" href="/MichaelSFlahertyResume.pdf" download aria-label="Download resume" style="text-decoration:none;color:#0366d6;margin-left:8px;">▸ Resume</a>
       </div>
@@ -34,6 +35,8 @@
           </div>
           <div>
             <a href="/MichaelSFlahertyResume.pdf" download style="color:#0366d6;text-decoration:none;font-weight:600;">Download Resume (PDF)</a>
+            &nbsp;•&nbsp;
+            <a href="/resume.html" style="color:#22c55e;text-decoration:none;font-weight:600;">Open Viewer</a>
           </div>
         </div>
         <div id="pdf-viewer" style="width:100%;height:calc(100vh - 120px);background:#fff;"></div>
